--- a/downloader/templates/downloader/index.html
+++ b/downloader/templates/downloader/index.html
@@ -1,65 +1,71 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>cr - Copy</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
-    <link rel="stylesheet" href="assets/css/Header-Blue.css">
-    <link rel="stylesheet" href="assets/css/Header-Dark.css">
-    <link rel="stylesheet" href="assets/css/Social-Icons.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>Utube</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crete+Round">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Scope+One">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'downloader/assets/fonts/fontawesome5-overrides.min.css' %}">
 </head>
 
-<body style="background-color: transparent;">
-    <div id="header" style="background-color: #ffffff;">
-        <div class="col" id="header_col" style="padding: 25px;background-color: #e6e3e3;color: rgb(255,255,255);"><i class="fab fa-youtube" style="height: 44px;width: 42px;font-size: 33px;padding: 0;color: rgb(249,45,32);"></i><label style="font-family: 'Source Sans Pro', sans-serif;font-size: 21px;opacity: 0.72;filter: sepia(21%);margin: 0;color: #000000;font-weight: bold;">MochaTube</label></div>
+<body>
+    <div>
+        <div class="col" style="background-color: #e6e3e3;padding: 2%;"><i class="fab fa-youtube" style="font-size: 30px;color: rgb(239,25,12);"></i><label style="font-size: 26px;font-family: Abel, sans-serif;letter-spacing: -1px;font-weight: bold;line-height: 38px;">MochaTube</label></div>
     </div>
-    <div class="text-center d-flex justify-content-center" id="image" style="background: url(&quot;assets/img/download.jpg&quot;) no-repeat;background-size: cover;width: 100%;height: 30%;background-image: url(&quot;none&quot;);background-color: rgb(249,45,32);">
-        <div class="jumbotron" style="opacity: 1;background-color: rgba(0,0,0,0);height: 20%;width: 100%;margin: 0px;padding: 1%;">
-            <form><input class="border rounded border-dark shadow-lg form-control d-flex" type="search" name="url" placeholder="Paste Youtube URL here.." style="width: 80%;height: 30px;background-color: rgb(0,0,0);padding: 2%;margin: 10%;margin-bottom: 10px;margin-top: 30px;color: rgb(255,255,255);"></form>
-            <p
-                class="text-monospace text-center" style="font-weight: normal;margin: 10px;font-family: 'Source Sans Pro', sans-serif;font-style: normal;color: rgb(255,255,255);">Fastest Youtube Downloader !!</p>
+    <div>
+        <div class="col" style="padding: 2%;">
+            <form class="d-flex align-items-center" method="get">
+                <input class="form-control" name="url" type="text" style="width: 92%;padding-right: 6px;padding-left: 6px;" placeholder="Paste Video URL here."><button class="btn btn-primary border-light" type="submit" style="width: 8%;height: 38px;margin-left: 7px;background-color: rgb(239,25,12);padding-right: 6px;padding-left: 6px;"><i class="fas fa-search"></i></button></form>
+                {% if results %}
+                <label class="text-center border rounded border-light" style="width: 100%;padding: 1%;margin-bottom: 0px;margin-top: 2%;font-family: 'Scope One', serif;font-weight: bold;letter-spacing: 1px;font-size: 13px;background-color: #bee8bd;color:rgb(15,133,48)">Successfully Extracted Download Links !</label>
+                <div class="table-responsive table-borderless text-center border rounded" style="margin-top: 2%;margin-bottom: 5%;">
+                    <table class="table table-bordered table-hover table-sm">
+                        <thead style="background-color: #e6e3e3;">
+                            <tr>
+                                <th class="text-center">Resolution</th>
+                                <th class="text-center">Format</th>
+                                <th class="text-center">Size</th>
+                                <th class="text-center">Play/Download</th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-info">
+                            {% for r in results %}
+                            <tr>
+                                <td>{{ r.resolution }}</td>
+                                <td>{{ r.extension }}</td>
+                                <td>{{ r.size }}</td>
+                                <td><a class="border rounded border-light" href="{{ r.url }}" style="background-color: #79e75d;color: rgb(255,255,255);" download="{{ title }}.{{ r.extension }}" target="_blank"><i class="fas fa-download border rounded border-light" style="padding: 2%;font-size: 14px;"></i></a></td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                {% else %}
+                    {% if not success %}
+                    <label class="text-center border rounded border-light" style="width: 100%;padding: 1%;margin-bottom: 0px;margin-top: 2%;font-family: 'Scope One', serif;font-weight: bold;letter-spacing: 1px;font-size: 13px;background-color: #edd0c9;color: rgb(207,15,3);">Oops! Couldn't find the video.</label>
+                </div>
+            </div><i class="fas fa-sad-tear d-flex d-sm-flex justify-content-center justify-content-sm-center" style="font-size: 210px;padding: 5%;padding-top: 2%;color: rgb(244,183,168);padding-bottom: 0px;line-height: 210px;"></i><label class="d-flex justify-content-center"
+                style="font-family: 'Crete Round', serif;font-weight: bold;font-style: normal;font-size: 38px;line-height: 54px;padding-bottom: 2%;">Sorry</label>        
+                {% else %}
+                <label class="text-center border rounded border-light" style="width: 100%;padding: 1%;margin-bottom: 0px;margin-top: 2%;font-family: 'Scope One', serif;font-weight: bold;letter-spacing: 1px;font-size: 13px;background-color: #d8e3f4;color: rgb(23,51,150);">Visit Again , Use Again</label>
+            </div>
+        </div><i class="fas fa-smile-beam d-flex d-sm-flex justify-content-center justify-content-sm-center" style="font-size: 210px;padding: 5%;padding-top: 2%;color: rgb(145,203,245);padding-bottom: 0px;line-height: 210px;"></i><label class="d-flex justify-content-center"
+            style="font-family: 'Crete Round', serif;font-weight: bold;font-style: normal;font-size: 38px;line-height: 54px;padding-bottom: 2%;color: rgb(1,1,1);">WeeHee !</label>
+                {% endif %}
+                {% endif %}
         </div>
     </div>
-    <div></div>
-    <div class="text-center d-flex justify-content-center" id="result" style="background: url(&quot;assets/img/download.jpg&quot;) no-repeat;background-size: cover;width: 100%;background-image: url(&quot;none&quot;);background-color: rgb(249,45,32);padding: 10%;height: auto;">
-        <div class="table-responsive bg-info border rounded shadow-lg" style="width: 100%;">
-            <table class="table table-striped">
-                <thead>
-                    <tr style="background-color: #e6e3e3;font-family: 'Source Sans Pro', sans-serif;">
-                        <th style="width: 33%;">Format</th>
-                        <th style="width: 33%;">Size</th>
-                        <th style="width: 33%;">Download</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr style="font-weight: bold;font-size: 12px;font-family: 'Source Sans Pro', sans-serif;color: #e6e3e3;">
-                        <td>.mp4</td>
-                        <td>25 MB</td>
-                        <td style="font-size: 12px;"><a class="text-light" href="#" style="color: rgb(7,7,7);background-color: transparent;padding: 2px;"><i class="fa fa-download"></i>&nbsp;Download</a></td>
-                    </tr>
-                    <tr style="font-weight: bold;font-size: 12px;font-family: 'Source Sans Pro', sans-serif;color: #e6e3e3;">
-                        <td>.mp4</td>
-                        <td>25 MB</td>
-                        <td style="font-size: 12px;"><a class="text-light" href="#" style="color: rgb(7,7,7);background-color: transparent;padding: 2px;"><i class="fa fa-download"></i>&nbsp;Download</a></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+    <div style="height: 108px;">
+        <div class="col text-center" style="padding: 2%;background-color: #e6e3e3;height: 123px;line-height: 12px;"><i class="fa fa-github d-flex justify-content-center" style="font-size: 44px;color: rgb(239,25,12);"></i><label class="text-monospace" style="font-weight: bold;line-height: 14px;font-size: 13px;color: rgb(92,14,14);letter-spacing: 1px;"><br>© 2019 MochaTek<br></label></div>
     </div>
-    <div class="social-icons" style="background-color: #e6e3e3;height: 230px;"><a href="#"></a><a href="#"><i class="fab fa-github border-danger" style="color: rgb(249,45,32);"></i></a><a href="#"></a><a href="#"></a>
-        <p style="color: rgb(102,81,79);font-weight: bold;"><br>© 2019 MochaTek. All rights reserved.<br><br></p>
-    </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
