--- a/downloader/templates/downloader/index.html
+++ b/downloader/templates/downloader/index.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut icon" href="https://img.icons8.com/color/48/000000/youtube-play.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Utube</title>
+    <title>MochaTube</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crete+Round">
