--- a/downloader/templates/downloader/index.html
+++ b/downloader/templates/downloader/index.html
@@ -86,7 +86,7 @@
                 {% endif %}
         </div>
     </div>
-    <div style="height: 108px;">
+    <div style="height: 108px;bottom: 0%;width:100%;">
         <div class="col text-center" style="padding: 2%;background-color: #e6e3e3;height: 123px;line-height: 12px;"><a href="https://github.com/mochatek/" style="text-decoration: none"><i class="fa fa-github d-flex justify-content-center" style="font-size: 44px;color: rgb(239,25,12);"></i></a><label class="text-monospace" style="font-weight: bold;line-height: 14px;font-size: 13px;color: rgb(92,14,14);letter-spacing: 1px;"><br><i class="far fa-copyright"></i> 2019 MochaTek<br></label></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
